--- a/Space Explorer Game/Game start/index.html
+++ b/Space Explorer Game/Game start/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Space Explorer</title>
+    <title>Vivek's Space Explorer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
